--- a/src/routes/Javascript.css
+++ b/src/routes/Javascript.css
@@ -6,12 +6,18 @@
 
 h4{
   color: white;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 h5{
   font-size: 1.2rem;
-  font-weight: lighter;
+  color: white;
+  font-weight: bolder;
+  margin: 20px 0;
+}
+
+h6{
+  font-size: 1rem;
   color: white;
 }
 
@@ -60,4 +66,5 @@ b{
 
 .textCode{
   color: rgb(209, 209, 209);
+  margin-top: 25px;
 }
