--- a/src/routes/Javascript.css
+++ b/src/routes/Javascript.css
@@ -42,19 +42,26 @@ b{
   color: white;
 }
 
-.prefacio ul{
-  list-style: none;
-  margin: 30px 0;
-}
-
-.prefacio ul li a{
+summary{
   text-decoration: none;
   color: #f78361;
   font-weight: 700;
   transition: 0.3s;
+  cursor: pointer;
 }
 
-.prefacio ul li a:hover{
+details{
+  display: flex;
+}
+
+details a{
+  color: white;
+  text-decoration: none;
+  margin-left: 18px;
+}
+
+details a:hover{
+  color: white;
   text-decoration: underline;
 }
 
