--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,6 @@ body{
   padding: 0 2%;
 }
 
-.menu{
-  background-image: linear-gradient(to top right, #f54b64, #f78361);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-}
-
-.menu2{
-  display: flex;
-  justify-content: space-around;
-}
-
 .link{
   text-decoration: none;
   padding: 5px;
@@ -54,7 +44,6 @@ footer{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 
 .icons{
@@ -77,6 +66,59 @@ footer{
 
 footer p{
   color:white;
+}
+
+@media screen and (max-width: 500px) {
+
+  .menu{
+    background: transparent;
+    box-shadow: none;
+  }
+
+  .menu2{
+    display: none;
+  }
+
+  .logo{
+    display: none;
+  }
+
+  .mobileMenu{
+    display: block;
+    background-image: linear-gradient(to top right, #f54b64, #f78361);
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 0%;
+    height: 100vh;
+    z-index: 999;  
+    overflow: hidden; 
+  }
+
+  .menuMobile{
+    display: block;
+  }
+
+  .abrir{
+    display: flex;
+    justify-content: end;
+  }
+
+  .openLogo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 3% 2% ;
+  }
+
+
+  .abrir i{
+    font-size: 2.5rem;
+    cursor: pointer;
+    color: white;
+  }
+  
+
 }
 
 html{
