--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,12 @@ footer p{
   color:white;
 }
 
-
+@media (max-width: 550px){
+  
+  h1{
+    margin-top: 120px;
+  }
+}
 
 html{
   scroll-behavior: smooth;
