--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body{
   border-radius: 3px;
 }
 
+
 h1{
   color: white;
   background-color: #323d52;
@@ -70,11 +71,16 @@ footer p{
 
 @media (max-width: 550px){
   
-  h1{
+  h1 {
     margin-top: 120px;
   }
+
 }
 
-html{
+html {
   scroll-behavior: smooth;
+}
+ 
+:target {
+  scroll-margin-top: 1em;
 }
