--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -61,6 +61,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #323d52;
+    box-shadow: rgba(19, 19, 31, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     position: fixed;
     top: 0;
     width: 100%;
