--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,9 +5,26 @@
 
 .menuLinks{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  gap: 10px;
   list-style: none;
-  padding: 10px 0;
+  padding: 5px 0;
+  align-items: center;
+}
+
+.link{
+  width: 100%;
+  text-decoration: none;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding: 0 10px;
+}
+
+.link:hover{
+  background-color: #242a38;
+  border-radius: 3px;
+  padding: 0 10px;
 }
 
 .openLogo{
@@ -37,12 +54,11 @@
     background-image: linear-gradient(to top right, #f54b64, #f78361);
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     gap: 20px;
     position: fixed;
     width: 70%;
-    right: 0;
+    left: 0;
     top: 0;
     margin-top: 30px;
     height: 100vh;
