--- a/src/index.css
+++ b/src/index.css
@@ -17,22 +17,6 @@ body{
   padding: 0 2%;
 }
 
-.link{
-  text-decoration: none;
-  padding: 5px;
-  margin: 5px 0;
-  color: white;
-  font-size: 1.2rem;
-  font-weight: 700;
-  transition: 0.3s;
-}
-
-.link:hover{
-  background-color: #242a38;
-  border-radius: 3px;
-}
-
-
 h1{
   color: white;
   background-color: #323d52;
@@ -41,39 +25,20 @@ h1{
   border-radius: 5px;
 }
 
-footer{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
-.icons{
-  display: flex;
-  list-style: none;
-  gap: 20px;
-  padding: 20px 0;
-}
-
-.icons li a{
-  color: #f54b64;
-  font-size: 2rem;
-  transition: 0.3s;
-}
-
-.icons li a:hover{
-  color: white;
-  transition: 0.5s;
-}
-
-footer p{
-  color:white;
-}
 
 @media (max-width: 550px){
   
   h1 {
     margin-top: 120px;
   }
+
+
+  footer{
+    flex-direction: column-reverse;
+
+  }
+
 
 }
 
