--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,27 +4,28 @@
 }
 
 .menuLinks{
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
   justify-content: space-around;
-  gap: 10px;
   list-style: none;
-  padding: 5px 0;
   align-items: center;
+  width: 100%;
 }
 
 .link{
-  width: 100%;
+  display: block;
   text-decoration: none;
   color: white;
   font-size: 1.2rem;
   font-weight: 700;
-  padding: 0 10px;
+  transition: 0.3s;
+  text-align: center;
+  padding: 5px 20px;
+  transition: 0.3s;
 }
 
 .link:hover{
-  background-color: #242a38;
-  border-radius: 3px;
-  padding: 0 10px;
+  background-color: #323d52;
 }
 
 .openLogo{
@@ -54,13 +55,14 @@
     background-image: linear-gradient(to top right, #f54b64, #f78361);
     display: flex;
     flex-direction: column;
+    align-items: start;
     justify-content: center;
-    gap: 20px;
+    gap: 2%;
     position: fixed;
     width: 70%;
-    left: 0;
+    right: 0;
     top: 0;
-    margin-top: 30px;
+    margin-top: 12%;
     height: 100vh;
     z-index: 888;
     overflow: hidden;
@@ -92,5 +94,9 @@
     border: 0;
     font-size: 2.5rem;
     cursor: pointer;
+  }
+
+  .link:hover{
+    background-color: transparent;
   }
 }
