--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 .meuFooter p{
