--- a/src/routes/Javascript/Javascript.css
+++ b/src/routes/Javascript/Javascript.css
@@ -63,7 +63,6 @@ details{
 details a{
   color: white;
   text-decoration: none;
-  margin-left: 45px;
 }
 
 details a:hover{
@@ -71,8 +70,9 @@ details a:hover{
   text-decoration: underline;
 }
 
-.sublist{
-  margin-left: 30px;
+details h6{
+  margin-left: 17px;
+  border-bottom: 1px solid white;
 }
 
 .line{
